# Lumos

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  Todo.txt  appveyor.yml  build.jenkinsfile  codecov.yml  editor.ini  premake-dependencies.lua  premake5.lua  project.4coder
.github/: CODE_OF_CONDUCT.md  (+3 more)
CoreEngine/: CMakeLists.txt  premake5.lua
CoreEngine/res/shaders/: DeferredColour.frag  DeferredColour.frag.spv  DeferredColour.glsl  DeferredColour.vert  DeferredColour.vert.spv  DeferredLight.frag  DeferredLight.frag.spv  DeferredLight.glsl  DeferredLight.shader  Shadow.frag  Shadow.frag.spv  Shadow.shader  Shadow.vert  Skybox.frag.spv  Skybox.vert  compileMac.sh  shader.vert.spv
CoreEngine/src/: Core.h  JM.cpp  JM.h
CoreEngine/src/AI/: AINode.h  AStar.cpp  AStar.h  PathEdge.cpp  PathEdge.h  PathNode.cpp  PathNode.h  PathNodePriorityQueue.h  QueueablePathNode.h
CoreEngine/src/App/: Application.cpp  Application.h  Input.cpp  Input.h  Window.h
CoreEngine/src/Audio/: OggSound.cpp  OggSound.h  Sound.cpp  Sound.h  SoundNode.cpp  SoundPriority.h  SoundSystem.cpp
CoreEngine/src/Entity/: Entity.cpp  Entity.h
CoreEngine/src/Entity/Component/: AIComponent.cpp  AIComponent.h  Component.cpp  Components.h  JMComponent.h  LightComponent.h  ModelComponent.cpp  ParticleComponent.cpp  Physics2DComponent.cpp  Physics2DComponent.h  SpriteComponent.cpp  TextureMatrixComponent.cpp  TextureMatrixComponent.h  TransformComponent.cpp
CoreEngine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
CoreEngine/src/Graphics/: Font.cpp  Font.h  GBuffer.cpp  GBuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Light.h  Material.cpp  Material.h  Mesh.cpp  MeshFactory.h  Particle.cpp  ParticleManager.cpp  RenderList.cpp  Sprite.cpp  Water.cpp  Water.h
CoreEngine/src/Graphics/API/: BufferLayout.h  CommandBuffer.cpp  Context.cpp  Context.h  DescriptorSet.cpp  FrameBuffer.cpp  IndexBuffer.h  Renderer.cpp  Swapchain.cpp  UniformBuffer.h  VertexArray.cpp
CoreEngine/src/Graphics/Camera/: Camera.cpp  Camera.h  Camera2D.cpp  FPSCamera.cpp  MayaCamera.h  SkyDomeCamera.cpp  ThirdPersonCamera.cpp  ThirdPersonCamera.h
CoreEngine/src/Graphics/Model/: GLTFLoader.cpp  Model.cpp  Model.h  OBJLoader.cpp
CoreEngine/src/Graphics/Renderers/: DebugRenderer.cpp  DebugRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  Renderer3D.h  ShadowRenderer.cpp  ShadowRenderer.h
CoreEngine/src/Maths/: BoundingBox.cpp  BoundingShape.h  BoundingSphere.cpp  BoundingSphere.h  Frustum.cpp  Frustum.h  Maths.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Rectangle.cpp  Rectangle.h  Vector2.h  Vector4.h
CoreEngine/src/Physics/B2PhysicsEngine/: B2PhysicsEngine.cpp  B2PhysicsEngine.h  PhysicsObject2D.cpp
CoreEngine/src/Physics/JMPhysicsEngine/: Broadphase.h  CollisionDetection.cpp  Constraint.h  CuboidCollisionShape.cpp  DistanceConstraint.cpp  DistanceConstraint.h  Hull.cpp  Integration.cpp  Integration.h  JMPhysicsEngine.h  Manifold.cpp  Manifold.h  Octree.cpp  Octree.h  SortAndSweepBroadphase.cpp  SortAndSweepBroadphase.h  SphereCollisionShape.cpp  SphereCollisionShape.h  SpringConstraint.cpp  SpringConstraint.h  WeldConstraint.h
CoreEngine/src/Platform/GLFM/: GLFMWindow.cpp
CoreEngine/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
CoreEngine/src/Platform/Unix/: UnixFileSystem.cpp  UnixLog.cpp
CoreEngine/src/Platform/Windows/: WindowsLog.cpp  WindowsTimer.cpp
CoreEngine/src/Renderer/: GraphicsPipeline.cpp  GraphicsPipeline.h  Scene.cpp  Scene.h  SceneManager.cpp
CoreEngine/src/Scripting/: LuaGlobals.h  LuaScript.cpp
CoreEngine/src/Scripting/Bindings/: EntityBinding.cpp
CoreEngine/src/System/: FileSystem.h  JMLog.cpp  JMLog.h  JobSystem.cpp  Settings.cpp  String.h  System.cpp  VFS.cpp  VFS.h
CoreEngine/src/Utilities/: AssetManager.h  CommonUtils.h  LoadImage.cpp  PerformanceTimer.h  RandomNumberGenerator.cpp  TimeManager.cpp  TimeStep.h  Timer.cpp  Timer.h
Dependencies/: CMakeLists.txt  premake5.lua
Dependencies/Box2D/: CMakeLists.txt  premake5.lua
Dependencies/FreeType/: .gitignore  .gitmodules  CMakeLists.txt  README  premake5.lua
Dependencies/FreeType/dependencies/XMake/: README  XMake.cmake
Dependencies/FreeType/include/freetype/: freetype.h
Dependencies/GLFW/: premake5.lua
Dependencies/GLFW/src/: cocoa_joystick.m  glx_context.c  linux_joystick.c  vulkan.c
Dependencies/GLFW/tests/: glfwinfo.c
Dependencies/SPIRV-Cross/: spirv_reflect.cpp
Dependencies/glad/: CMakeLists.txt  premake5.lua
Dependencies/glad/include/glad/: glad_wgl.h
Dependencies/glfw/: premake5.lua
Dependencies/glfw/src/: cocoa_window.m
Dependencies/imgui/: premake5.lua
Dependencies/imgui/examples/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Dependencies/imgui/plugins/: ImFileBrowser.h  ImGuizmo.cpp  ImGuizmo.h  ImTextEditor.cpp  ImTextEditor.h
Dependencies/lua/: premake5.lua
Dependencies/volk/: CMakeLists.txt  premake5.lua
Dependencies/vulkan/: spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py  vk_mem_alloc.h
Dependencies/vulkan-portability/: vk_extx_portability_subset.h
Dependencies/vulkan/libs/iOS/: libMoltenVK.dylib
Sandbox/: CMakeLists.txt  Launch Screen.storyboard  Sandbox.lmproj  SandboxApp.cpp  Settings.cfg  Settings.lua  Test.lua  premake5.lua
Sandbox/Assets/Scenes/: 2D.lsn  Material.lsn  Physics.lsn  Pong.lsn  Terrain.lsn
Sandbox/Assets/Scripts/: FlappyBirdTest.lua  Projectile.lua  Script.lua
Sandbox/Assets/Textures/: checkerboard.tga  icon.icns
Sandbox/Scenes/: GraphicsScene.cpp  GraphicsScene.h  MaterialTest.cpp  MaterialTest.h  Scene2D.cpp  Scene2D.h  Scene3D.cpp  Scene3D.h  SceneLuaTest.cpp  SceneLuaTest.h  SceneModelViewer.cpp  SceneModelViewer.h  ScenePathFollowing.h  SceneSelect.cpp  SceneSelect.h
Sandbox/Scenes/CubeGame/: CubeGame.cpp  CubeGame.h
Sandbox/res/meshes/: capsule.glb
Sandbox/res/scenes/: 2D.lsn  Material.lsn  MaterialTest.lsn  Physics.lsn
Sandbox/res/scripts/: FlappyBirdTest.lua  LuaSceneTest.lua  PlayerTest.lua
(+2511 files in other folders)
