CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (libbox2d CXX)

FILE (GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/Box2D/*.cpp)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})
ADD_LIBRARY (box2d STATIC ${SOURCES})
SET_TARGET_PROPERTIES (
    box2d
    PROPERTIES
    CXX_STANDARD 14
    )

INSTALL (
    DIRECTORY "${PROJECT_SOURCE_DIR}/Box2D"
    DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
    FILES_MATCHING PATTERN "*.h"
    )